--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
