--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8",
+    "swiper": "^11.0.6",
     "typewriter-effect": "^2.21.0",
     "zustand": "^4.5.0"
   },
